2004-01-31 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/c8051f000.h,
	* device/include/c8051f120.h,
	* device/include/c8051f300.h: added header files for Silicon
	Laboratories (formerly Cygnal) CPUs. Contributed by Maarten Brock.

2004-01-31 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (processParams): added new type flow and restructured
	(gatherAutoInit): added new type flow
	(addCast): cosmetic changes
	(getLeftResultType): added new type flow for array indices, patch
	provided by Stas, see FR #877103
	(decorateType): SDCC_NEWTYPEFLOW removed, new type flow is now standard;
	array index patch by Stas
	* src/SDCCast.h: added prototype getResultTypeFromType()
	* src/SDCCval.h,
	* src/SDCCval.c (resolveIvalSym) (resolveIvalSym),
	* src/pic/glue.c (pic14emitStaticSeg),
	* src/pic16/glue.c (pic16emitStaticSeg),
	* src/SDCCglue.c (emitRegularMap) (emitStaticSeg): added new type flow
	for initialization of symbols
	* src/SDCCicode.c (geniCodeArray): removed warning W_ARRAY_BOUND
	* support/Util/SDCCerr.h:
	* support/Util/SDCCerr.c: replaced W_ARRAY_BOUND by W_IDX_OUT_OF_BOUNDS
	* .version: bumped version number to 2.3.8
	* device/include/Makefile.in (install),
	* doc/Makefile (install): changed to 'rm `find ...`' construct to
	avoid warnings

2004-01-30 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/tests/libmullong.c: fixed for 64 bit hosts
	Slade Rich fixed an optimization bug
	* src/pic/pcodepeep.c,
	* src/pic/pcoderegs.c
	* doc/Makefile (install): added test for directory

2004-01-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (getRegPtr, getRegGpr),
	* src/ds390/ralloc.c (getRegPtr, getRegGpr),
	* src/pic/ralloc.c (getRegPtr, getRegGpr),
	* src/pic16/ralloc.c (getRegPtr, getRegGpr),
	* src/z80/ralloc.c (getRegGpr): fixed bug #883361
	* as/mcs51/asexpr.c (term),
	* as/hc08/asexpr.c (term): fixed bug #887146

2004-01-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
