@@ -1,3 +1,9 @@
+2004-02-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCicode.c (geniCodeParms),
+	* src/SDCCast.c (decorateType, processParms): support for ANSI-style
+	function pointers, fixed function pointer bugs #861242 and #861896
+
 2004-01-31 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
 
 	* device/include/c8051f000.h,
